--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-asgiref==3.5.0
-Django==4.0.2
+asgiref==3.10.0
+crispy-bootstrap5==2025.6
+Django==4.2.25
+django-crispy-forms==2.4
 psycopg2-binary==2.9.3
 sqlparse==0.4.2
+typing_extensions==4.15.0
 tzdata==2021.5
