--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.10.0
 crispy-bootstrap5==2025.6
 Django==4.2.25
+django-allauth==65.12.1
 django-crispy-forms==2.4
 psycopg2-binary==2.9.3
 sqlparse==0.4.2
